Processing feedback
Signed-off-by: Arjan Tijms <arjan.tijms@omnifish.ee>